--- a/movierental/templates/navbar.html
+++ b/movierental/templates/navbar.html
@@ -48,6 +48,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/login/">Login</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/signup/">Sign Up</a>
+                </li>
                 {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="/movies/">Best Seller</a>
