--- a/movierental/templates/navbar.html
+++ b/movierental/templates/navbar.html
@@ -55,6 +55,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/movies/">Best Seller</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/genre/">Genre</a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0" method="POST" action="/search/">
                 {% csrf_token %}
