--- a/movierental/templates/genre.html
+++ b/movierental/templates/genre.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Flims by genre</h1>
+<h1>Films by genre</h1>
 <br><br>
 {% for query in qs %}
 <div class="container">
