--- a/movierental/templates/navbar.html
+++ b/movierental/templates/navbar.html
@@ -20,7 +20,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Movie Hub</a>
+        <a class="navbar-brand" href="/"><h2>Movie Hub</h2></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -59,6 +59,9 @@
                     <a class="nav-link" href="/genre/">Genre</a>
                 </li>
             </ul>
+            {% if request.session.check == 1 %}
+                &nbsp&nbsp&nbsp&nbspHello, {{user_info.name}} &nbsp&nbsp&nbsp&nbsp
+            {% endif %}
             <form class="form-inline my-2 my-lg-0" method="POST" action="/search/">
                 {% csrf_token %}
                 <input class="form-control mr-sm-2" type="search" placeholder="Movie Search" aria-label="Search" name="q" value="{{q}}">
