--- a/movierental/templates/signup.html
+++ b/movierental/templates/signup.html
@@ -9,7 +9,7 @@
     <label style="min-width: 12%;">Name(Required) : </label><input type="text" name="name" placeholder="Write Your Name"><br>
     <label style="min-width: 12%;">Si : </label><input type="text" name="si" placeholder="Your Si"><br>
     <label style="min-width: 12%;">Gu : </label><input type="text" name="gu" placeholder="Your Gu"><br>
-    <label style="min-width: 12%;">Creditcard : </label><input type="text" name="creditcard" placeholder="xxxx-xxxx-xxxx"><br>
+    <label style="min-width: 12%;">Creditcard : </label><input type="text" name="creditcard" placeholder="xxxx-xxxx-xxxx-xxxx"><br>
     <label style="min-width: 12%;">Email(Required) : </label><input type="text" name="email" placeholder="example@example.com"><br>
     <label style="min-width: 12%;">Phonenumber : </label><input type="text" name="phonenumber" placeholder="010-xxxx-xxxx"><br>
     <label style="min-width: 12%;">Sex : </label><input type="text" name="sex" placeholder="M or F"><br>
