--- a/movierental/templates/signin.html
+++ b/movierental/templates/signin.html
@@ -16,7 +16,7 @@
             <input type="name" class="form-control" name="name" id="name"
                    value="{{ form.password.value|default_if_none:'' }}" style="width:200px;">
         </div>
-        <button type="submit" class="btn btn-secondary" style="height:35px; font-size:13px;">Login</button>
+        <button type="submit" class="btn btn-secondary">Login</button>
     </form>
 </div>
 
